(20241204) 이민혁 1차 메인 임시 제작

--- a/work/IIP_001.html
+++ b/work/IIP_001.html
@@ -123,18 +123,18 @@
                         <tr>
                             <td>1</td>
                             <td class="txt-l">
-                                <a href="#" class="com-view-title"><span class="table-label">공지</span> 지자체 평생교육이용권 시스템 일시중단 안내</a>
+                                <a href="#" class="com-view-title"><span class="table-label">공지</span> 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</a>
                             </td>
                             <td>2024-10-02</td>
                         </tr>
                         <tr>
-                            <td>1</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">지자체 평생교육이용권 시스템 일시 중단 안내</a></td>
+                            <td>2</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</a></td>
                             <td>2024-10-02</td>
                         </tr>
                         <tr>
-                            <td>1</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">지자체 평생교육이용권 시스템 일시 중단 안내</a></td>
+                            <td>3</td>
+                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
                             <td>2024-10-02</td>
                         </tr>
                     </tbody>
