--- a/work/IIP_002.html
+++ b/work/IIP_002.html
@@ -93,8 +93,8 @@
                             <td>[시스템공지] 지자체 평생교육이용권 시스템 일시중단 안내(09.27~09.28)</td>
                         </tr>
                         <tr>
-                            <th scope="row" class="txt-l">강좌명</th>
-                            <td>평생교육강좌</td>
+                            <th scope="row" class="txt-l">작성일</th>
+                            <td>2024-09-24</td>
                         </tr>
                         <tr>
                             <th scope="row" class="txt-l">글내용</th>
