--- a/work/IIP_100.html
+++ b/work/IIP_100.html
@@ -85,19 +85,19 @@
             <div class="mapping-area">
                 <div class="mapping flex-acjs">
                     <dl>
-                        <dt>정상 승인건</dt>
+                        <dt>정상승인 건</dt>
                         <dd>0</dd>
                     </dl>
                     <dl>
-                        <dt>정상 승인건</dt>
+                        <dt>부분취소 건</dt>
                         <dd>0</dd>
                     </dl>
                     <dl>
-                        <dt>정상 승인건</dt>
+                        <dt>학습자 정보 등록 불가 건</dt>
                         <dd>0</dd>
                     </dl>
                 </div>
-                <p>* 상단의 바우처 사용정보는 매핑 대기건(미매핑)의 정상승인건, 부분취소건에 대한 정보로 사용기관 및 가맹점번호 정보 변경에 따라 달라질 수 있습니다.</p>
+                <p>* 상단의 이용권 사용정보는 매핑 대기건(미매핑)의 정상승인건, 부분취소건에 대한 정보로 사용기관 및 가맹점번호 정보 변경에 따라 달라질 수 있습니다.</p>
             </div>
             <div class="search-box">
                 <form>
@@ -176,7 +176,7 @@
                 <li>* 승인취소 건도 1건으로 조회되며 <em class="color-red">전체 승인취소, 매입취소 건은 붉은색</em>, <em class="color-blue">부분취소 건은 파란색</em> 폰트로 출력됩니다.</li>
                 <li>* 학습자 정보 등록 불가 내역은 리스트에 포함되지 않으며 [학습자 정보 등록 불가 내역] 팝업에서 확인 가능합니다.</li>
                 <li>* 이용권 사용 내역과 실제 사용기관의 바우처 결제 내역이 불일치할 경우 평생교육바우처실로 문의 바랍니다.</li>
-                <li>* 문의 : 홈페이지 사용기관 문의사항 및 평생교육이용권 이메일(lllcard@nile.or.kr)</li>
+                <li>&#8251; 문의 : 홈페이지 사용기관 문의사항 및 평생교육이용권 이메일(lllcard@nile.or.kr)</li>
             </ul>
             <div class="top-info-group">
                 <div class="top-info flex-ac">
