--- a/work/IIP_200.html
+++ b/work/IIP_200.html
@@ -129,12 +129,6 @@
                 </form> 
                 <button type="submit" class="btns">검색</button>
             </div>  
-            <ul class="add-notice">
-                <li>* 승인취소 건도 1건으로 조회되며 <em class="color-red">전체 승인취소, 매입취소 건은 붉은색</em>, <em class="color-blue">부분취소 건은 파란색</em> 폰트로 출력됩니다.</li>
-                <li>* 학습자 정보 등록 불가 내역은 리스트에 포함되지 않으며 [학습자 정보 등록 불가 내역] 팝업에서 확인 가능합니다.</li>
-                <li>* 이용권 사용 내역과 실제 사용기관의 바우처 결제 내역이 불일치할 경우 평생교육바우처실로 문의 바랍니다.</li>
-                <li>* 문의 : 홈페이지 사용기관 문의사항 및 평생교육이용권 이메일(lllcard@nile.or.kr)</li>
-            </ul>
             <div class="table-box">
                 <div class="top-info-group">
                     <p class="top-info-group-data">총 <strong>2</strong>건</p>
@@ -260,7 +254,7 @@
                         <li>* 항목별 입력이 가능한 범위를 넘어서면 업로드 검증이 불가합니다.</li>
                     </ul>
                     <div class="layer-btn-wrap">
-                        <button class="btns" onclick="$('[data-pop=pop-1]').hide();">닫기</button>
+                        <button class="btns" onclick="$('[data-pop=pop-1]').hide();">업로드</button>
                     </div>
                 </div>
             </div>
