--- a/work/LMP_002.html
+++ b/work/LMP_002.html
@@ -22,10 +22,10 @@
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">
+            <a href="#" class="log-info">
                 <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
                 <span class="log-info-txt">로그아웃</span>
-            </a> -->
+            </a>
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -68,7 +68,7 @@
         </div>
     </header>
     <div class="container temp">
-        <div class="temp-cont lgp-1">
+        <div class="temp-cont lgp-2">
             <div class="temp-links-wrap">
                 <a href="IGP_001.html" title="평생교육이용권이란"></a>
                 <a href="IMP_001.html" title="사용기관 로그인 및 등록 신청"></a>
