--- a/work/PMP_001.html
+++ b/work/PMP_001.html
@@ -21,11 +21,6 @@
             <a href="#"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
         </div>
         <div class="menu-area">
-            <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">
-                <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
-                <span class="log-info-txt">로그아웃</span>
-            </a> -->
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -68,10 +63,10 @@
         </div>
     </header>
     <div class="container temp">
-        <div class="temp-cont lgp-1">
+        <div class="temp-cont pmp-1">
             <div class="temp-links-wrap">
-                <a href="IGP_001.html" title="평생교육이용권이란"></a>
-                <a href="IMP_001.html" title="사용기관 로그인 및 등록 신청"></a>
+                <a href="#" title="공란"></a>
+                <a href="#" title="공란"></a>
                 <a href="IIP_500.html" title="질의 응답"></a>
                 <a href="LNP_100.html" title="자료실"></a>
             </div>
