--- a/work/index.html
+++ b/work/index.html
@@ -365,9 +365,28 @@
           <td class="ac">O</td>
           <td></td>
         </tr>
+
+
         <tr class="line done">
           <th>평생교육이용권</th>
           <td>사용기관 로그인</td>
+          <td>page</td>
+          <td><a href="./IMP_001.html" target="blank">IMP_001.html</a></td>
+          <td class="ac">O</td>
+          <td>
+          </td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>사용기관 메인</td>
+          <td>page</td>
+          <td><a href="./IMP_002.html" target="blank">IMP_002.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>지자체 메인 로그인 전</td>
           <td>page</td>
           <td><a href="./LMP_001.html" target="blank">LMP_001.html</a></td>
           <td class="ac">O</td>
@@ -375,13 +394,21 @@
         </tr>
         <tr class="line done">
           <th>평생교육이용권</th>
-          <td>사용기관 메인</td>
+          <td>지자체 메인 로그인 후</td>
           <td>page</td>
-          <td><a href="./IMP_001.html" target="blank">IMP_001.html</a></td>
+          <td><a href="./LMP_002.html" target="blank">LMP_002.html</a></td>
           <td class="ac">O</td>
-          <td>
-          </td>
+          <td></td>
         </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>포털 메인</td>
+          <td>page</td>
+          <td><a href="./PMP_001.html" target="blank">PMP_001.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+
         <tr class="line done">
           <th>평생교육이용권</th>
           <td>공지사항(사용기관)</td>
