--- a/work/IGP_001.html
+++ b/work/IGP_001.html
@@ -197,7 +197,7 @@
                         </div>
                         <ul class="txt-list">
                             <li>평생교육희망카드 발급 이후 국가평생교육진흥원에서 공지하는 날까지</li>
-                            <li>평생교육희망카드 발급 이후 국가평생교육진흥원에서 공지하는 날까지</li>
+                            <li>기간 내 미사용 금액은 자동소멸되며, 다음 연도 이월이나 현금일출 불가</li>
                         </ul>
                         <div class="top-info-group">
                             <h3>이용절차</h3>
@@ -243,7 +243,9 @@
                             <h3>이용권 이용 준수사항</h3>
                         </div>
                         <div class="border-box">                            
-                            <p>평생교육이용권 이용자 준수사항을 위반할 경우, 평생교육법 제16조의3(평생교육이용권의 사용 등), 동법 제45조의3(벌칙) 등 관련 법에 따른 처벌, 평생교육이용권 사용 중지, 부정사용액 등 회수 또는 환수가 이루어지며, 차년도 사업참여가 제한될 수 있습니다.</p>
+                            <p>
+                                평생교육이용권 이용자 준수사항을 위반할 경우, 평생교육법 제16조의3(평생교육이용권의 사용 등), 동법 제45조의3(벌칙) 등 관련
+                                법에 따른 처벌, 평생교육이용권 사용 중지, 부정사용액 등 회수 또는 환수가 이루어지며, 차년도 사업참여가 제한될 수 있습니다.</p>
                         </div>
                         <div class="top-info-group">
                             <h3>평생교육이용권 사용</h3>
@@ -260,7 +262,7 @@
                             <li>
                                 <img src="../images/biz2/img/img_terms02.png" alt="">
                                 <div class="txt-area">
-                                    <p class="txt">평생교육이용권은 24년 8월 30일(금)까지 결제 가능하며, 기간 내 미사용액은 추가 사용 및 이월 불가합니다.</p>
+                                    <p class="txt">평생교육이용권은 <span class="color-blue">24년 8월 30일(금)까지 결제 가능</span>하며, 기간 내 미사용액은 추가 사용 및 이월 불가합니다.</p>
                                     <p class="txt-muted">※ 평생교육희망카드 결제 가능 기간은 사업 운영 상황에 따라 변경될 수 있습니다.</p>
                                     <p class="txt-muted">※ 결제마감일이 임박해 카드 취소(환불) 시, 한도 복원에 2~5일이 소요되므로, 이용권을 사용하지 못하는 상황이 발생할 수 있습니다.</p>
                                 </div>                                
@@ -268,7 +270,7 @@
                             <li>
                                 <img src="../images/biz2/img/img_terms03.png" alt="">
                                 <div class="txt-area">
-                                    <p class="txt">평생교육이용권으로 결제한 교육강좌는 80% 이상 수강을 권고드립니다.</p>
+                                    <p class="txt">평생교육이용권으로 <span class="color-blue">결제한 교육강좌는 80% 이상 수강</span>을 권고드립니다.</p>
                                     <p class="txt-muted">※ 평생교육이용권으로 이용한 교육강좌의 이수 여부는 사용기관에서 등록·관리합니다.</p>
                                     <p class="txt-muted">※ 이수 기준 및 입력 관련 사항은 사용기관에 문의하여 주시기 바랍니다.</p>
                                 </div>
@@ -291,6 +293,7 @@
                                 <div class="txt-area">
                                     <p class="txt">2. 평생교육강좌 수강 이외에 다른 목적으로 부당하게 평생교육이용권을 사용해서는 안됩니다.</p>
                                     <p class="txt-muted">※ 유아 및 어린이, 청소년 등 만 19세 미만 대상 강좌는 수강하실 수 없습니다(부모 동반 포함).</p>
+                                    <p class="txt-muted">※ 재료비는 이용권으로 결제할 수 없습니다.</p>
                                     <p class="txt-muted">※ 유·무선 전자·통신 기기 구매(패키지 및 사은품 등을 통한 제공 포함), 전자교재(PDF, e-book)는 불가합니다.</p>
                                     <p class="txt-muted">※ 기타 물품, 입회비, 가입비, 자격증 응시/발급료, 검정료, 보험료, 택배비, 각종 수수료 등에는 사용이 불가합니다.</p>
                                     <p class="txt-muted">※ 구매 불가한 내역의 결제행위에 대한 책임은 이용자 본인에게 있습니다.</p>
