--- a/work/IIP_600.html
+++ b/work/IIP_600.html
@@ -87,7 +87,7 @@
                 <li><strong>참여목적 : </strong>평생교육이용권 사용기관 업무 효율성 및 정보보호 인식 제고</li>
                 <li><strong>참여일정 : </strong>2024.11.14(월)~2024.12.30(금)</li>
                 <li><strong>참여방법 : </strong>아래 교육프로그램 바로가기 클릭</li>
-                <li><strong>참고사항 : </strong>바로가기 버튼을 클릭해도 이동하지 않을 경우 <a href="https:/www.test.co.kr" target="_blank" >https:/www.test.co.kr</a>로 이동해주세요.</li>
+                <li><strong>참고사항 : </strong>바로가기 버튼을 클릭해도 이동하지 않을 경우 <a class="color-primary" href="https:/www.test.co.kr" target="_blank" >https:/www.test.co.kr</a>로 이동해주세요.</li>
             </ul>
             <div class="top-info-group">
                 <h3>교육 프로그램</h3>
@@ -110,12 +110,12 @@
                     <tbody>
                         <tr>
                             <td class="txt-l">1.어서와! 개인정보보호법은 처음이지?</td>
-                            <td>개인정보보호법의 내용 및 필요성</td>
+                            <td class="txt-l">개인정보보호법의 내용 및 필요성</td>
                             <td><button type="button" class="btns bg-blue">재시청하기</button></td>
                         </tr>
                         <tr>
                             <td class="txt-l">2. 개인정보 처리의 시작과 끝</td>
-                            <td>개인정보 처리의 단계별 준수사항</td>
+                            <td class="txt-l">개인정보 처리의 단계별 준수사항</td>
                             <td><button type="button" class="btns bg-blue">시청하기</button></td>
                         </tr>
                     </tbody>
@@ -129,7 +129,7 @@
                         <small class="ico">관련내용 : 개인정보보호법이란?</small>
                     </p>
                     <div class="flex-ac">
-                        <button type="button" class="btns">맞아요</button>
+                        <button type="button" class="btns bg-primary-600">맞아요</button>
                         <button type="button" class="btns bg-gray no-sign">아니에요</button>
                     </div>
                 </dd>
@@ -139,7 +139,7 @@
                         <small class="ico">관련내용 : 개인정보보호법이란?</small>
                     </p>
                     <div class="flex-ac">
-                        <button type="button" class="btns">맞아요</button>
+                        <button type="button" class="btns bg-primary-600">맞아요</button>
                         <button type="button" class="btns bg-gray no-sign">아니에요</button>
                     </div>
                 </dd>
@@ -149,7 +149,7 @@
                         <small class="ico">관련내용 : 개인정보보호법이란?</small>
                     </p>
                     <div class="flex-ac">
-                        <button type="button" class="btns">맞아요</button>
+                        <button type="button" class="btns bg-primary-600">맞아요</button>
                         <button type="button" class="btns bg-gray no-sign">아니에요</button>
                     </div>
                 </dd>
