--- a/work/IMP_001.html
+++ b/work/IMP_001.html
@@ -8,150 +8,111 @@
     <link rel="stylesheet" href="../css/biz2/reset.css">
     <link rel="stylesheet" href="../css/biz2/common.css">
     <link rel="stylesheet" href="../css/biz2/layout.css">
-    <link rel="stylesheet" href="../css/biz2/main.css">    
+    <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
-
-    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
     <script src="../js/biz2/jquery-3.7.1.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
     <title>울산광역시 평생교육이용원</title>
 </head>
+
 <body>
-    <div class="main">
-        <header>
-            <div class="logo-area">
-                <a href="#">
-                    <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
-                </a>
-            </div>
-            <div class="menu-area">
-                <button class="open-btn">
-                    <span class="blind">메뉴 열기</span>
+    <header>
+        <div class="logo-area">
+            <a href="#"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
+        </div>
+        <div class="menu-area">
+            <button class="open-btn">
+                <span class="blind">메뉴 열기</span>
+            </button>
+            <div class="menu-box">
+                <ul class="link-group login">
+                    <li>
+                        <span class="tit">사업안내</span>
+                        <div class="link-item">
+                            <a href="IGP_001.html" class="on">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">이용권 사용기관</span>
+                        <div class="link-item">
+                            <a href="#">사용기관 신청</a>
+                            <a href="#">사용기관 신청 현황</a>
+                            <a class="hidden" href="#">이용권 사용내역</a>
+                            <a href="#">교육결과 관리</a>
+                            <a class="hidden" href="#">교육과정 정보</a>
+                            <a class="hidden" href="#">학습자 정보</a>
+                            <a href="IIP_400.html">기관 정보 수정</a>
+                            <a class="hidden" href="#">사용기관 연수</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">게시판</span>
+                        <div class="link-item">
+                            <a href="IIP_001.html">공지사항</a>
+                            <a href="LNP_100.html">자료실</a>
+                            <a href="LNP_200.html">자주하는질문</a>
+                            <a href="IIP_500.html">질의응답</a>
+                        </div>
+                    </li>
+                </ul>
+                <button class="close-btn">
+                    <span class="blind">메뉴 닫기</span>
                 </button>
-                <div class="menu-box">
-                    <ul class="link-group login">
-                        <li>
-                            <span class="tit">사업안내</span>
-                            <div class="link-item">
-                                <a href="#" class="on">평생교육이용권이란?</a>
-                                <a href="#">평생교육이용권 사용하기</a>
-                            </div>
-                        </li>
-                        <li>
-                            <span class="tit">이용권 사용기관</span>
-                            <div class="link-item">
-                                <a href="#">사용처 안내</a>
-                                <a href="#">사용기관 신청 현황</a>
-                                <a href="#" class="hidden">이용권 사용내역</a>
-                                <a href="#" class="hidden">교육과정 정보</a>
-                                <a href="#" class="hidden">학습자 정보</a>
-                                <a href="#">기관 정보 수정</a>
-                                <a href="#" class="hidden">사용기관 연수</a>
-                                <a href="#">서약서 동의</a>
-                            </div>
-                        </li>
-                        <li>
-                            <span class="tit">게시판</span>
-                            <div class="link-item">
-                                <a href="#">공지사항</a>
-                                <a href="#">자료실</a>
-                                <a href="#">자주하는질문</a>
-                                <a href="#">질의응답</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <button class="close-btn">
-                        <span class="blind">메뉴 닫기</span>
-                    </button>
-                </div>
             </div>
-        </header>
-        <div class="container wrap">
-            <div class="main-info-content">
-                <div class="link-area">
-                    <div class="link-box">
-                        <div class="link login-btn">
-                            <p class="agency-info">기관명</p>
-                            <p class="agency-info">담당자 : 김담당</p>
-                            <a href="#" class="txt">기관정보 수정</a>
-                        </div>
-                        <button class="tikcet-btn link">
-                            <span class="txt">이용권 사용 내역</span>
-                        </button>
-                        <button class="use-btn link">
-                            <span class="txt">교육과정 관리</span>
-                        </button>
-                    </div>
-                    <div class="notice-box">
-                        <span class="title">공지사항</span>
-                        <div class="banner-group">
-                            <div class="swiper">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <a href="#">
-                                            <span class="ic new">NEW</span>
-                                            <span class="txt">2024년 10월 1일 (화) '국군의 날' 휴무 안내</span>
-                                            <span class="day">2024.10.25</span>
-                                        </a>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <a href="#">
-                                            <span class="ic new">NEW</span>
-                                            <span class="txt">2024년 10월 1일 (화) '국군의 날' 휴무 안내</span>
-                                            <span class="day">2024.10.25</span>
-                                        </a>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <a href="#">
-                                            <span class="ic new">NEW</span>
-                                            <span class="txt">2024년 10월 1일 (화) '국군의 날' 휴무 안내</span>
-                                            <span class="day">2024.10.25</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <button class="more-btn"><span class="blind">공지사항 더보기</span></button>
-                    </div>
+        </div>
+    </header>
+    <div class="container">
+        <div class="login-wrap wrap">
+            <div class="auth-form g">
+                <h2 class="auth-form-tit txt-c">로그인</h2>
+                <div class="auth-form-group">
+                    <label for="id">아이디</label>
+                    <input type="text" id="id" placeholder="아이디를 입력해주세요.">
                 </div>
-                <div class="more-link-area">
-                    <a href="#">평생교육<br>이용권이란?</a>
-                    <a href="#">질의 응답</a>
-                    <a href="#">자료실</a>
+                <div class="auth-form-group">
+                    <label for="pw">비밀번호</label>
+                    <input type="password" id="pw" placeholder="비밀번호를 입력하세요.">
+                </div>
+                <button type="button" class="btns">로그인</button>   
+            </div>
+            <a href="#" class="register-btn g">
+                <img src="../images/biz2/ic_register.svg" alt="사용기관 등록 이미지">
+                <h2 class="register-btn-txt txt-c">사용기관 등록</h2>
+            </a>
+        </div>
+    </div>
+    <footer class="wrap">
+        <div class="info-content">
+            <span class="footer-logo"><span class="blind">평생교육이용권</span></span>
+            <address>
+                <span class="txt"><span>(04520)</span><span>서울특별시 중구 청계천로 14 (무교동77)</span></span>
+                <span class="tel"><span>대표전화</span><span>1600-3005 (평일 09시~18시)</span></span>
+            </address>
+            <select class="ui-select" title="관련 사이트 선택">
+                <option value="#">관련 사이트</option>
+            </select>
+            <div class="link-area">
+                <div class="link-box">
+                    <a href="#">이용약관</a>
+                    <a href="#" class="on">개인정보처리방침</a>
+                    <a href="#">저작권정책</a>
+                    <a href="#">이메일무단수집거부</a>
+                </div>
+                <span class="copy">
+                    COPYRIGHT 2024. NATIONAL INSTITUTE FOR LIFELONG EDUCATION. ALL RIGHTS
+                    RESERVED.
+                </span>
+                <div class="support-box">
+                    <img src="../images/biz2/footer_link_1.png" alt="교육부">
+                    <img src="../images/biz2/footer_link_2.png" alt="국가평생교육진흥원">
+                    <img src="../images/biz2/footer_link_3.png" alt="wa">
+                    <img src="../images/biz2/footer_link_4.png" alt="청렴세상">
                 </div>
             </div>
         </div>
-        <footer class="wrap">
-            <div class="info-content">
-                <span class="footer-logo"><span class="blind">평생교육이용권</span></span>
-                <address>
-                    <span class="txt"><span>(04520)</span><span>서울특별시 중구 청계천로 14 (무교동77)</span></span>
-                    <span class="tel"><span>대표전화</span><span>1600-3005 (평일 09시~18시)</span></span>
-                </address>
-                <select class="ui-select" title="관련 사이트 선택">
-                    <option value="#">관련 사이트</option>
-                </select>
-                <div class="link-area">
-                    <div class="link-box">
-                        <a href="#">이용약관</a>
-                        <a href="#" class="on">개인정보처리방침</a>
-                        <a href="#">저작권정책</a>
-                        <a href="#">이메일무단수집거부</a>
-                    </div>
-                    <span class="copy">
-                        COPYRIGHT 2024. NATIONAL INSTITUTE FOR LIFELONG EDUCATION. ALL RIGHTS
-                        RESERVED.
-                    </span>
-                    <div class="support-box">
-                        <img src="../images/biz2/footer_link_1.png" alt="교육부">
-                        <img src="../images/biz2/footer_link_2.png" alt="국가평생교육진흥원">
-                        <img src="../images/biz2/footer_link_3.png" alt="wa">
-                        <img src="../images/biz2/footer_link_4.png" alt="청렴세상">
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </div>
+    </footer>
 </body>
 </html>
