전체메뉴 추가

--- a/work/IMP_001.html
+++ b/work/IMP_001.html
@@ -23,9 +23,7 @@
             <a href="#"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
         </div>
         <div class="menu-area">
-            <button class="open-btn">
-                <span class="blind">메뉴 열기</span>
-            </button>
+            <a href="IMP_002.html" class="home-btn"></a>
             <div class="menu-box">
                 <ul class="link-group login">
                     <li>
