--- a/work/LMP_002.html
+++ b/work/LMP_002.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,7 +17,8 @@
 </head>
 <body>
     <header>
-        <div class="logo-area">
+        <div class="logo-area multi-logo-area">
+            <a href="#"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
             <a href="#"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
         </div>
         <div class="menu-area">
@@ -34,21 +35,35 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="IGP_001.html" class="on">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권이란?</a>
                             <a href="IGP_001.html">평생교육이용권 사용하기</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">사용안내</span>
+                        <div class="link-item">
+                            <a href="#">사용처 안내</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">우수이용자 신청</span>
+                        <div class="link-item">
+                            <a href="#">우수이용자 신청</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">평생교육이용권</span>
+                        <div class="link-item">
+                            <a href="#">이용권 신청</a>
+                            <a href="#">이의제기 신청</a>
+                            <a href="#">선정 취소 신청</a>
+                            <a href="#">수기 공모 신청</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
-                            <a href="#">사용기관 신청</a>
-                            <a href="#">사용기관 신청 현황</a>
-                            <a class="hidden" href="#">이용권 사용내역</a>
-                            <a href="#">교육결과 관리</a>
-                            <a class="hidden" href="#">교육과정 정보</a>
-                            <a class="hidden" href="#">학습자 정보</a>
-                            <a href="IIP_400.html">기관 정보 수정</a>
-                            <a class="hidden" href="#">사용기관 연수</a>
+                            <a href="#">이용권 사용기관 신청</a>
                         </div>
                     </li>
                     <li>
@@ -57,7 +72,17 @@
                             <a href="IIP_001.html">공지사항</a>
                             <a href="LNP_100.html">자료실</a>
                             <a href="LNP_200.html">자주하는질문</a>
-                            <a href="IIP_500.html">질의응답</a>
+                            <a href="#">이용자 질의응답</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">마이페이지</span>
+                        <div class="link-item">
+                            <a href="#">개인정보수정</a>
+                            <a href="#">이용권 신청내역</a>
+                            <a href="#">이용권 이용내역</a>
+                            <a href="#">교육이수정보</a>
+                            <a href="#">이용자 이벤트</a>
                         </div>
                     </li>
                 </ul>
@@ -71,7 +96,7 @@
         <div class="temp-cont lgp-2">
             <div class="temp-links-wrap">
                 <a href="IGP_001.html" title="평생교육이용권이란"></a>
-                <a href="IMP_001.html" title="사용기관 로그인 및 등록 신청"></a>
+                <a href="#" title="공란"></a>
                 <a href="IIP_500.html" title="질의 응답"></a>
                 <a href="LNP_100.html" title="자료실"></a>
             </div>
