--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -17,7 +17,8 @@
 </head>
 <body>
     <header>
-        <div class="logo-area">
+        <div class="logo-area multi-logo-area">
+            <a href="#"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
             <a href="#"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
         </div>
         <div class="menu-area">
@@ -34,21 +35,26 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="IGP_001.html" class="on">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권이란?</a>
                             <a href="IGP_001.html">평생교육이용권 사용하기</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">사용안내</span>
+                        <div class="link-item">
+                            <a href="#">사용처 안내</a>
+                        </div>
+                    </li>
+                    <li>
+                        <span class="tit">평생교육이용권</span>
+                        <div class="link-item">
+                            <a href="#">이용권 신청</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
-                            <a href="#">사용기관 신청</a>
-                            <a href="#">사용기관 신청 현황</a>
-                            <a class="hidden" href="#">이용권 사용내역</a>
-                            <a href="#">교육결과 관리</a>
-                            <a class="hidden" href="#">교육과정 정보</a>
-                            <a class="hidden" href="#">학습자 정보</a>
-                            <a href="IIP_400.html">기관 정보 수정</a>
-                            <a class="hidden" href="#">사용기관 연수</a>
+                            <a href="#">이용권 사용기관 신청</a>
                         </div>
                     </li>
                     <li>
@@ -57,7 +63,6 @@
                             <a href="IIP_001.html">공지사항</a>
                             <a href="LNP_100.html">자료실</a>
                             <a href="LNP_200.html">자주하는질문</a>
-                            <a href="IIP_500.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
