--- a/work/index.html
+++ b/work/index.html
@@ -372,7 +372,7 @@
         </tr>
 
 
-        <tr class="line done">
+        <tr class="line done main">
           <th>평생교육이용권</th>
           <td>사용기관 로그인</td>
           <td>page</td>
