(20241206) 이민혁 제이쿼리 변경 및 1206 공유

--- a/work/IIP_201.html
+++ b/work/IIP_201.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
-    <script src="../js/biz2/jquery-3.7.1.min.js"></script>
+    <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용원</title>
+    <title>울산광역시 평생교육이용권</title>
 </head>
 
 <body>
@@ -190,7 +190,7 @@
                 </table>
             </div>
             <div class="top-info-group">
-                <h3>강좌정보</h3>
+                <h3>학습자 정보</h3>
                 <div class="r-section">
                     <label for="aa">학습자 정렬 :</label>
                     <select id="aa">
