--- a/work/IIP_400.html
+++ b/work/IIP_400.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
-    <script src="../js/biz2/jquery-3.7.1.min.js"></script>
+    <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용원</title>
+    <title>울산광역시 평생교육이용권</title>
 </head>
 
 <body>
@@ -327,7 +327,7 @@
                         <tr>
                             <th class="txt-l">부정사용 처리기준 및 절차 동의</th>
                             <td>동의</td>
-                            <td>2024-05-12</td>
+                            <td class="txt-c">2024-05-12</td>
                         </tr>
                     </tbody>
                 </table>
@@ -420,31 +420,43 @@
                     <tbody>
                         <tr>
                             <th class="txt-l">사업자등록증/고유번호증</th>
-                            <td>이미지 2. jpg[114615 byte]
-                                <button type="button" class="btn-search">검색</button>
+                            <td>
+                                <div class="flex-ac">
+                                    이미지 2. jpg[114615 byte]
+                                    <button type="button" class="btn-search">검색</button>
+                                </div>
                             </td>
-                            <td>2024.03.15</td>
+                            <td class="txt-c">2024.03.15</td>
                         </tr>
                         <tr>
                             <th class="txt-l">평생교육기관 증빙서류</th>
-                            <td>이미지 2. jpg[114615 byte]
-                                <button type="button" class="btn-search">검색</button>
+                            <td>
+                                <div class="flex-ac">
+                                    이미지 2. jpg[114615 byte]
+                                    <button type="button" class="btn-search">검색</button>
+                                </div>
                             </td>
-                            <td>2024.03.15</td>
+                            <td class="txt-c">2024.03.15</td>
                         </tr>
                         <tr>
                             <th class="txt-l">2024년 평생교육강좌<br>운영 계획서</th>
-                            <td>이미지 2. jpg[114615 byte]
-                                <button type="button" class="btn-search">검색</button>
+                            <td>
+                                <div class="flex-ac">
+                                    이미지 2. jpg[114615 byte]
+                                    <button type="button" class="btn-search">검색</button>
+                                </div>
                             </td>
-                            <td>2024.03.15</td>
+                            <td class="txt-c">2024.03.15</td>
                         </tr>
                         <tr>
                             <th class="txt-l">운영계획 증빙자료<br>(교육청 신고내역, 기관정관 등)</th>
-                            <td>이미지 2. jpg[114615 byte]
-                                <button type="button" class="btn-search">검색</button>
+                            <td>
+                                <div class="flex-ac">
+                                    이미지 2. jpg[114615 byte]
+                                    <button type="button" class="btn-search">검색</button>
+                                </div>
                             </td>
-                            <td>2024.03.15</td>
+                            <td class="txt-c">2024.03.15</td>
                         </tr>
                     </tbody>
                 </table>
