--- a/work/LCP_001.html
+++ b/work/LCP_001.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
-    <script src="../js/biz2/jquery-3.7.1.min.js"></script>
+    <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용원</title>
+    <title>울산광역시 평생교육이용권</title>
 </head>
 
 <body>
@@ -211,9 +211,9 @@
             <div class="layer-scroll">
                 <span class="title">평생교육이용권 신청을 위한 개인정보 수집 · 이용 동의(필수)</span>
                 <div class="info-area">
-                    <p>
+                    <p class="desc">
                         평생교육이용권 홈페이지에서 제공하는 인터넷 관련 서비스를 원활하게 수행하기 위하여 개인정보의 수집,유출,오용,남용으로부터 사생활의 비밀 등을 보호하도록 한 
-                        개인정보보호법 규정에 따라 다음과 같이 수집됩니다.
+                        개인정보보호법 규정에 따라 다음과 같이 수집·이용·제공됩니다.
                     </p>
                     <div class="top-info-group">
                         <h3>개인정보 수집 · 이용 동의</h3>
