--- a/work/PMP_001.html
+++ b/work/PMP_001.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
-    <script src="../js/biz2/jquery-3.7.1.min.js"></script>
+    <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용원</title>
+    <title>울산광역시 평생교육이용권</title>
 </head>
 <body>
     <header>
@@ -64,7 +64,7 @@
     <div class="container temp">
         <div class="temp-cont pmp-1">
             <div class="temp-links-wrap">
-                <a class="temp-links-special" href="#" title="공란"></a>
+                <a class="temp-links-special" href="IGP_001.html" title="평생교육이용권이란?"></a>
                 <a href="#" title="공란"></a>
                 <a href="#" title="공란"></a>
                 <a href="IIP_500.html" title="질의 응답"></a>
