--- a/work/index.html
+++ b/work/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 
 <head>
-  <title>울산광역시 평생교육이용원</title>
+  <title>울산광역시 평생교육이용권</title>
   <meta charset="utf-8">
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   <style type="text/css">
@@ -199,6 +199,10 @@
     table.file_lst tr.done.main {
       background: rgb(255, 225, 230);
     }
+
+    table.file_lst tr.done.popup {
+      background: rgb(212, 228, 212);
+    }
     
 
     table.file_lst thead th {
@@ -305,12 +309,16 @@
       $('.count-info .popup span').text(popupNum);
 
     });
+
+
+
+
   </script>
 </head>
 
 <body>
   <div class="cont">
-    <h2>울산광역시 평생교육이용원 <span style="color: #999!important; font-size: 18px!important;">사용기관 (PC만 제작 반응형 X)</span></h2>
+    <h2>울산광역시 평생교육이용권 <span style="color: #999!important; font-size: 18px!important;">사용기관 (PC만 제작 반응형 X)</span></h2>
     <p style="margin-top: 24px; color: blue; font-size: 15px;">* 색상이 칠해진 행은 완료된 페이지입니다.</p>
     <p style="margin-top: 10px; background-color: rgb(255, 225, 230); font-size: 15px; display: inline-block;">* 분홍색 행은 메인 페이지입니다.</p>
     <span class="count-info">
@@ -338,40 +346,17 @@
         </tr>
       </thead>
       <tbody>
-        <tr class="line done">
-          <th>평생교육이용권</th>
-          <td>본인인증 약관동의</td>
-          <td>page</td>
-          <td><a href="./LCP_001.html" target="blank">LCP_001.html</a></td>
-          <td class="ac">O</td>
+        <tr class="line">
+          <th>평생교육이용권 공통 변경사항</th>
           <td></td>
-        </tr>
-        <tr class="line done">
-          <th>평생교육이용권</th>
-          <td>본인인증</td>
-          <td>page</td>
-          <td><a href="./LCP_002.html" target="blank">LCP_002.html</a></td>
-          <td class="ac">O</td>
           <td></td>
+          <td><a href="#" target="blank"></a></td>
+          <td class="ac"></td>
+          <td>
+            12.04 : woff, woff2 폰트 형식 추가 <br>
+            12.06 : 제이쿼리 1.8.2 min.js 변경
+          </td>
         </tr>
-        <tr class="line done">
-          <th>평생교육이용권</th>
-          <td>본인인증 완료</td>
-          <td>page</td>
-          <td><a href="./LCP_003.html" target="blank">LCP_003.html</a></td>
-          <td class="ac">O</td>
-          <td></td>
-        </tr>
-        <tr class="line done">
-          <th>평생교육이용권</th>
-          <td>평생교육이용권이란?</td>
-          <td>page</td>
-          <td><a href="./IGP_001.html" target="blank">IGP_001.html</a></td>
-          <td class="ac">O</td>
-          <td></td>
-        </tr>
-
-
         <tr class="line done main">
           <th>평생교육이용권</th>
           <td>사용기관 로그인</td>
@@ -413,7 +398,38 @@
           <td class="ac">O</td>
           <td></td>
         </tr>
-
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>본인인증 약관동의</td>
+          <td>page</td>
+          <td><a href="./LCP_001.html" target="blank">LCP_001.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>본인인증</td>
+          <td>page</td>
+          <td><a href="./LCP_002.html" target="blank">LCP_002.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>본인인증 완료</td>
+          <td>page</td>
+          <td><a href="./LCP_003.html" target="blank">LCP_003.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>평생교육이용권이란?</td>
+          <td>page</td>
+          <td><a href="./IGP_001.html" target="blank">IGP_001.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
         <tr class="line done">
           <th>평생교육이용권</th>
           <td>공지사항(사용기관)</td>
@@ -594,7 +610,79 @@
           <th>평생교육이용권</th>
           <td>자주하는질문 상세</td>
           <td>page</td>
-          <td><a href="./LNP_201.html" target="blank">LNP_201.html</a></td>
+          <td><a href="./LNP_202.html" target="blank">LNP_202.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관 신청_약관동의</td>
+          <td>page</td>
+          <td><a href="./ILP_001.html" target="blank">ILP_001.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관 신청_본인인증</td>
+          <td>page</td>
+          <td><a href="./ILP_002.html" target="blank">ILP_002.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관 신청_신청서 작성</td>
+          <td>page</td>
+          <td><a href="./ILP_003.html" target="blank">ILP_003.html</a></td>
+          <td class="ac"></td>
+          <td>12.06 : 미완성으로 완성본 차주 전달</td>
+        </tr>
+        <tr class="line">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관 신청_담당자 등록</td>
+          <td>page</td>
+          <td><a href="./ILP_004.html" target="blank">ILP_004.html</a></td>
+          <td class="ac"></td>
+          <td>12.06 : 미완성으로 완성본 차주 전달</td>
+        </tr>
+        <tr class="line done popup">
+          <th>평생교육이용권</th>
+          <td>평생이용권 홈페이지 이용약관 팝업</td>
+          <td>popup</td>
+          <td><a href="./ILP_020.html" target="blank">ILP_020.html</a></td>
+          <td class="ac">O</td>
+          <td>아래 팝업들은 모두 페이지 제작 전으로 임시 html로 만들어두었습니다.</td>
+        </tr>
+        <tr class="line done popup">
+          <th>평생교육이용권</th>
+          <td>평생이용권 홈페이지 이용약관 개인정보 (필수) 팝업</td>
+          <td>popup</td>
+          <td><a href="./ILP_021.html" target="blank">ILP_021.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done popup">
+          <th>평생교육이용권</th>
+          <td>평생이용권 홈페이지 이용약관 개인정보 (선택) 팝업</td>
+          <td>popup</td>
+          <td><a href="./ILP_022.html" target="blank">ILP_022.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done popup">
+          <th>평생교육이용권</th>
+          <td>기관 조회 팝업</td>
+          <td>popup</td>
+          <td><a href="./ILP_023.html" target="blank">ILP_023.html</a></td>
+          <td class="ac">O</td>
+          <td></td>
+        </tr>
+        <tr class="line done popup">
+          <th>평생교육이용권</th>
+          <td>평생교육이용권 사용기관 정보보안 서약서(담당자용) 팝업</td>
+          <td>popup</td>
+          <td><a href="./ILP_024.html" target="blank">ILP_024.html</a></td>
           <td class="ac">O</td>
           <td></td>
         </tr>
